# ai-voice-interviewer

./: .gitignore  ANSWER_EVALUATION_MODULE.md  NLP_MODULE_README.md  PYTHON_FASTAPI_SKELETON.md  README.md  RESUME_SCREENING_SUMMARY.md  pyproject.toml
docs/: RESUME_SCREENING_NLP.md
examples/: README.md  answer_comparison_demo.py  answer_evaluation_demo.py  evaluation_formats_demo.py  resume_screening_example.py  simple_example.py  text_interview_engine_example.py
src/app/: config.py  main.py
src/app/api/: deps.py
src/app/api/routers/: candidates.py  health.py  interviews.py  jobs.py  reports.py
src/app/api/schemas/: candidate.py  interview.py  job.py  report.py
src/app/domain/policies/: interview_policy.py  scoring_policy.py  shortlisting.py
src/app/interview_engine/: __init__.py  engine.py
src/app/llm/: base.py  factory.py  fake_client.py
src/app/llm/prompts/: evaluation.md  interview_plan.md  screening.md
src/app/nlp/: __init__.py  answer_evaluator.py  education_extractor.py  evaluation_report.py  experience_extractor.py  scorer.py  skill_extractor.py
src/app/persistence/: db.py  tables.py
src/app/persistence/repositories/: application_repo.py  candidate_repo.py  interview_repo.py  job_repo.py  report_repo.py
src/app/services/: evaluation_service.py  ingestion_service.py  interview_service.py  reporting_service.py  screening_service.py
src/app/utils/: errors.py  logging.py
src/app/workers/: tasks.py
tests/unit/: test_shortlisting.py  test_text_interview_engine.py
